# retico-runners

./: .gitignore
IAC/: .gitignore  iac.py  pyproject.toml
cozmo_iac/: README_Catherine.md  cozmo_IAC.py
iac/: .gitignore  ZeroMQto.py  ZeroMQtoDetectedObjectsIU.py  iac.py  m1_pyaudio.sh  pyproject.toml  zmq_client.py  zmq_server.py
rrsds/: vision_test.py
