[tool.poetry]
name = "retico_iac"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.6.3"

# Retico modules locally
retico-dino = {path = "../../retico-dino", develop=true}
retico-cozmorobot = {path = "../../retico-cozmorobot", develop=true}
retico-sam = {path = "../../retico-sam", develop=true}
retico-vision = {path = "../../retico-vision", develop=true}
retico-core = {path = "../../retico-core", develop=true}

# Added specifically for baseline retico dependencies
opencv-python = "^4.9.0.80"
transformers = "^4.37.1"
mobile-sam = {git = "https://github.com/ChaoningZhang/MobileSAM.git"}
segment-anything = {git = "https://github.com/facebookresearch/segment-anything.git"}
torch = "^2.1.2"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"
timm = "^0.9.12"
supervision = "^0.18.0"
Glances = "^3.4.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
